# Hercules

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Makefile.in  configure  configure.ac  configure.in
Hercules.xcodeproj/: project.pbxproj
cmake/: CodeCoverage.cmake  FindMySQL.cmake
db/: item_db2.conf
db/pre-re/: item_db.conf
db/re/: item_db.conf
npc/: MOTD.txt
npc/quests/newgears/: 2008_headgears.txt
src/char/: CMakeLists.txt  Makefile.in  char.c  char.h  int_auction.c  int_guild.c  int_homun.c  int_party.c  int_party.h  inter.c  loginif.c  mapif.c  mapif.h
src/common/: CMakeLists.txt  HPM.c  HPM.h  HPMDataCheck.h  HPMSymbols.inc.h  HPMi.h  Makefile.in  cbasetypes.h  core.c  crypto.h  socket.c  sql.c  strlib.c  sysinfo.c  sysinfo.inc.in  utils.c  utils.h
src/login/: CMakeLists.txt  Makefile.in  login.c  login.h
src/map/: CMakeLists.txt  Makefile.in  atcommand.c  battle.c  battle.h  channel.c  chrif.c  clif.c  clif.h  instance.c  intif.c  itemdb.c  itemdb.h  log.c  map.c  map.h  mob.c  npc.c  npc_chat.c  pc.c  pc.h  quest.c  script.c  script.h  skill.c  skill.h  status.c  unit.c  unit.h
src/plugins/: CMakeLists.txt  sample.c
src/plugins/HPMHooking/: HPMHooking.Defs.inc  HPMHooking_char.HPMHooksCore.inc  HPMHooking_char.HookingPoints.inc  HPMHooking_char.Hooks.inc  HPMHooking_char.sources.inc  HPMHooking_login.HPMHooksCore.inc  HPMHooking_login.HookingPoints.inc  HPMHooking_login.Hooks.inc  HPMHooking_login.sources.inc  HPMHooking_map.HPMHooksCore.inc  HPMHooking_map.HookingPoints.inc  HPMHooking_map.Hooks.inc  HPMHooking_map.sources.inc
src/test/: CMakeLists.txt  Makefile.in  module_utils.c  test_cbasetypes.c  test_utils.c  testsupport.h
src/tool/: Makefile.in
tools/: generate_migration.sh
tools/HPMHookGen/: CMakeLists.txt  HPMHookGen.pl  doxygen.conf
tools/ci/: travis.sh
tools/doxygen/: CMakeLists.txt  doxygen.conf
